--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,5 @@
   justify-content: center;
   align-items: center;
   display: flex;
-}
-.Todo__container {
-  width: 60%;
-  height: 70%;
-  background-color: gray;
+  min-width: 300px;
 }
