--- a/src/copmponents/todo/todo.css
+++ b/src/copmponents/todo/todo.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   gap: 30px;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .todo__add {
   display: flex;
@@ -63,4 +64,10 @@ height: 100%;
 .todo__filterButton select{
     width: 100px;
     height: 25px;
+}
+.todo__list{
+  width: 100%;
+  display: flex;
+  justify-content: left;
+  align-items: left;
 }
