--- a/src/copmponents/todoItem/todoItem.css
+++ b/src/copmponents/todoItem/todoItem.css
@@ -18,19 +18,19 @@ flex-direction: row;
     margin: 2px;
 }
 .green__button{
-    background-color: green;
+    background-color: red;
     color: white;
     border-radius: 2px;
     margin: 2px;
 }
 .red__button{
-    background-color: red;
+    background-color: green;
     color: white;
     border-radius: 2px;
     margin: 2px;
 }
 .yellow__button{
-    background-color: red;
+    background-color: rgba(255, 255, 0, 0.671);
     color: white;
     border-radius: 2px;
     margin: 2px;
