--- a/src/copmponents/todoItem/todoItem.css
+++ b/src/copmponents/todoItem/todoItem.css
@@ -1,7 +1,8 @@
-#li{
+.li{
 display: flex;
 justify-content: space-between;
 flex-direction: row;
+font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 .todo_item{
     display: flex;
@@ -16,22 +17,26 @@ flex-direction: row;
     color: white;
     border-radius: 2px;
     margin: 2px;
+    border-color: blue;
 }
 .red__button{
     background-color: red;
     color: white;
     border-radius: 2px;
     margin: 2px;
+    border-color: red;
 }
 .green__button{
     background-color: green;
     color: white;
     border-radius: 2px;
     margin: 2px;
+    border-color: green;
 }
 .yellow__button{
     background-color: rgba(255, 255, 0, 0.671);
     color: white;
     border-radius: 2px;
     margin: 2px;
+    border-color: yellow;
 }
