redux persist adding

--- a/src/copmponents/filterButton/filterButton.css
+++ b/src/copmponents/filterButton/filterButton.css
@@ -1,8 +1,12 @@
 .todo__filterButton{
     display: flex;
-    
+    font-family: "Fira Sans", sans-serif;
 }
 .todo__filterButton select{
     border-color: white;
     border-radius: 2px;
+    font-family: "Fira Sans", sans-serif;
+}
+.todo__filterButton button{
+    font-family: "Fira Sans", sans-serif;
 }
