--- a/src/copmponents/todo/todo.css
+++ b/src/copmponents/todo/todo.css
@@ -1,12 +1,13 @@
 .Todo__container {
   width: 60%;
-  background-color: rgba(128, 128, 128, 0.322);
+  background-color: rgba(128, 128, 128, 0.26);
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 30px;
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+font-family: 'Segoe UI', sans-serif;
 min-width: 400px;
+border-radius: 10px;
 }
 .todo__add {
   display: flex;
@@ -77,4 +78,10 @@ height: 100%;
 }
 .todo__filter-searchBar input{
   border-color: white;
+}
+.todo_add-form{
+      display: flex;
+   
+    width: 100%;
+    height: 35px;
 }
