--- a/src/copmponents/todoList/todoList.css
+++ b/src/copmponents/todoList/todoList.css
@@ -1,8 +1,8 @@
-#li {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-}
+
 .unordered-todos {
   list-style-type: none;
   display: flex;
   flex-direction: column;
+  gap: 25px;
+width: 100%;
 }
